# bogus-interface

./: .gitmodules  bench.rb
interface/: CMakeLists.txt  README.md
interface/src/: ClothFrictionData.cc  ClothFrictionData.hh  ClothFrictionDataExamples.cc  ClothFrictionSolver.cc  ClothFrictionSolver.hh  DualFrictionSolvers.cc  DualFrictionSolvers.hh  MCPLaw.cc  MCPLaw.hh  MatrixTypes.hh  NodalContact.cc  NodalContact.hh  NodalGaussSeidel.hh  NodalGaussSeidel.impl.hh  NodalSelfContact.cc  NodalSelfContact.hh  RevCoulombLaw.cc  RevCoulombLaw.hh  RevCoulombLaw.impl.hh  SolverOptions.hh  SolverStats.hh  TotalContact.cc  TotalContact.hh
interface/test/: loader.cpp
